# api/openapi.yaml
@@ -5,7 +5,7 @@ info:
   version: 0.0.1
 servers:
 - description: Here we go, let's make this happen!
-  url: http://api.alpha.parvaeres.io/v1
+  url: http://api.poc.parvaeres.io/v1
 paths:
   /deployment:
     description: This resource represents the deployments in the system
@@ -24,6 +24,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/GetDeploymentResponse'
           description: OK
+      security:
+      - ApiKeyAuth: []
       summary: Get all deployments
     post:
       requestBody:
@@ -43,9 +45,31 @@ paths:
               schema:
                 $ref: '#/components/schemas/CreateDeploymentResponse'
           description: Accepted
+      security:
+      - ApiKeyAuth: []
       summary: Create a new deployment
     summary: Deployments
   /deployment/{deploymentId}:
+    delete:
+      parameters:
+      - description: the id of the deployment to delete
+        explode: false
+        in: path
+        name: deploymentId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DeploymentStatus'
+          description: OK
+      security:
+      - ApiKeyAuth: []
+      summary: Delete the deployment with id deploymentId
     description: This resource represents an individual deployment
     get:
       parameters:
@@ -64,6 +88,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/DeploymentStatus'
           description: OK
+      security:
+      - ApiKeyAuth: []
       summary: Get the deployment with id deploymentId
     summary: A deployment
 components:
@@ -160,3 +186,8 @@ components:
       - ERROR
       - UNKNOWN
       type: string
+  securitySchemes:
+    ApiKeyAuth:
+      in: header
+      name: X-API-KEY
+      type: apiKey
